# website

./: .gitmodules
backend/: ChangeLog.md  backend.cabal  cabal.project
backend/dist-newstyle/cache/: compiler  config  elaborated-plan  plan.json  solver-plan  source-hashes  up-to-date
backend/dist-newstyle/packagedb/ghc-8.0.2/: package.cache  snap-1.0.0.1-inplace.conf  snap-loader-static-1.0.0.0-inplace.conf  snaplet-postgresql-simple-1.0.1.0-inplace.conf  websockets-0.11.1.0-inplace.conf  websockets-snap-0.10.2.1-inplace.conf
backend/src/: Main.hs
examples/static-site/: stack.yaml  website.cabal
examples/static-site/src/: Site.hs
frontend/: ChangeLog.md  Setup.hs  cabal.project  frontend.cabal
frontend/dist-newstyle/cache/: compiler  config  elaborated-plan  plan.json  solver-plan  source-hashes  up-to-date
frontend/dist-newstyle/packagedb/ghc-8.0.2/: dependent-sum-template-0.0.0.5-inplace.conf  package.cache  reflex-0.5.0-inplace.conf  reflex-dom-0.4-inplace.conf  reflex-dom-contrib-0.5-inplace.conf  reflex-dom-core-0.4-inplace.conf
frontend/dist-newstyle/packagedb/ghcjs-0.2.1/: dependent-sum-template-0.0.0.5-inplace.conf  package.cache  reflex-0.5.0-inplace.conf  reflex-dom-0.4-inplace.conf  reflex-dom-contrib-0.5-inplace.conf  reflex-dom-core-0.4-inplace.conf
frontend/src/: Main.hs
